# zenpdf

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: __init__.py  test_config.py  test_history.py  test_loader.py  test_splitter.py
zenpdf/: __init__.py  cli.py  config.py  embedder.py  history.py  llm.py  loader.py  rag.py  splitter.py  vectorstore.py
