[project]
name = "zenpdf"
version = "0.1.0"
description = "Serene local PDF Q&A with RAG using Ollama & LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Suresh Sonwane", email = "sonwanesuresh95@gmail.com"}]
keywords = ["rag", "pdf", "ollama", "langchain", "llm", "local-ai", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.4.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
zenpdf = "zenpdf.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zenpdf*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
